--- a/css/style.css
+++ b/css/style.css
@@ -229,12 +229,75 @@ img {
     color: var(--grey-text);
 }
 
-/* .form-svg {
-    position: absolute;
-} */
+.form-input {
+    position: relative;
+    display: block;
+    width: 100%;
+    min-height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+}
 
-.modal {
-    padding: 40px;
+.form-textarea {
+    /* position: relative; */
+    display: block;
+    width: 100%;
+    min-height: 120px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+}
+
+.form-textarea::placeholder {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+    padding: 12px 16px;
+}
+
+.agree-text {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: rgba(117, 117, 117, 1);
+}
+
+.agree-link {
+    color: var(--blue-text);
+    text-decoration: underline;
+}
+
+.form-svg {
+    position: absolute;
+    bottom: 11px;
+    left: 12px;
+} 
+
+
+.agreement {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-btn{
+    width: 200px;
+    height: 50px;
+    border: var(--blue-text);
+    background: var(--blue-text);
+    color: var(--white-text);
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 16px;    
+    line-height: 1.87;
+    letter-spacing: 0.06em;
+    margin-top: 30px;
+    padding: 10px 55px;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
 .backdrop {
@@ -260,6 +323,7 @@ img {
     min-width: 528px;
     min-height: 581px;
     border-radius: 4px;
+    padding: 40px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
