--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,18 @@
     box-sizing: inherit;
 } */
 
+/* .is-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+} */
 
 .logo {
     font-family: 'Raleway', sans-serif;
@@ -179,10 +191,50 @@ img {
     cursor: pointer;
 }
 
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: auto;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    opacity: 1;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+    position: absolute;
+    z-index: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    background-color: var(--white-text);
+    min-width: 528px;
+    min-height: 581px;
+    border-radius: 4px;
+    padding: 40px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+} 
+
+.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(0.9);
+} 
+
+.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    /* transform: translate(100%, 100%); */
+}
+
 .close-btn {
- /* display: flex;
+    display: flex;
     justify-content: center;
-    align-items: center; */
+    align-items: center;
     position: absolute;
     top: 8px;
     right: 8px;
@@ -192,6 +244,19 @@ img {
     border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: var(--white-text);
     cursor: pointer;
+}
+
+.close-btn:active {
+    outline: none;
+}
+
+.close-btn-svg {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-btn:hover .close-btn-svg,
+.close-btn:focus .close-btn-svg {
+    fill: var(--blue-text);
 }
 
 .form-order {
@@ -236,6 +301,21 @@ img {
     min-height: 40px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+    padding: 11px 12px 11px 42px;
+}
+
+.form-input:focus {
+  outline: none;
+  border-color: var(--blue-text);
+}
+
+.form-input:focus ~ .form-svg {
+  fill: var(--blue-text);
+}
+
+.form-textarea:focus {
+    outline: none;
+    border-color: var(--blue-text);
 }
 
 .form-textarea {
@@ -245,6 +325,7 @@ img {
     min-height: 120px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+    padding: 12px 16px;
 }
 
 .form-textarea::placeholder {
@@ -254,21 +335,64 @@ img {
     line-height: 1.17;
     letter-spacing: 0.01em;
     color: rgba(117, 117, 117, 0.5);
-    padding: 12px 16px;
 }
 
 .agree-text {
+    display: flex;
+    align-items: center;
+    padding-left: 12px;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: rgba(117, 117, 117, 1);
+    cursor: pointer;
+}
+
+
+.agree-text::before {
+  margin-right: 8px;
+  content: '';
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  background-image: url(../images/icon-uncheck.svg);
+  background-size: cover;
+  border-radius: 2px;
+}
+
+.agree-check:checked + .agree-text::before {
+  background-color: var(--blue-text);
+  background-image: url(../images/icon-check.svg);
+  background-size: cover;
+  border-radius: 2px;
 }
 
 .agree-link {
     color: var(--blue-text);
     text-decoration: underline;
+}
+
+.agree-check-img {
+    background-color: var(--white-text);
+    border: 2px solid var(--black-text);
+    border-radius: 2px;
+    width: 16px;
+    height: 15px;
+}
+
+.agree-check {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .form-svg {
@@ -277,13 +401,14 @@ img {
     left: 12px;
 } 
 
-
 .agreement {
-    display: flex;
-    flex-direction: column;
+    display: block;
+    /* margin-bottom: 30px; */
 }
 
 .form-btn{
+    display: block;
+    margin: 0 auto;
     width: 200px;
     height: 50px;
     border: var(--blue-text);
@@ -297,49 +422,9 @@ img {
     margin-top: 30px;
     padding: 10px 55px;
     border-radius: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     cursor: pointer;
 }
-
-.backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: auto;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
-    opacity: 1;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal {
-    position: absolute;
-    z-index: auto;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(1);
-    background-color: var(--white-text);
-    min-width: 528px;
-    min-height: 581px;
-    border-radius: 4px;
-    padding: 40px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} 
-
-.is-hidden .modal {
-    transform: translate(-50%, -50%) scale(0.9);
-} 
-
-.is-hidden {
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-    /* transform: translate(100%, 100%); */
-}
-
 
 
 .title {
