--- a/css/style.css
+++ b/css/style.css
@@ -212,7 +212,7 @@ img {
     transform: translate(-50%, -50%) scale(1);
     background-color: var(--white-text);
     min-width: 528px;
-    min-height: 581px;
+    height: 581px;
     border-radius: 4px;
     padding: 40px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -283,6 +283,12 @@ img {
     margin-bottom: 28px;
 }
 
+.form-label-text {
+    position: relative;
+    display: block;
+    margin-bottom: 20px;
+}
+
 .form-name {
     position: absolute;
     top: -18px;
@@ -298,7 +304,7 @@ img {
     position: relative;
     display: block;
     width: 100%;
-    min-height: 40px;
+    height: 40px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     padding: 11px 12px 11px 42px;
@@ -321,6 +327,7 @@ img {
 .form-textarea {
     /* position: relative; */
     display: block;
+    resize: none;
     width: 100%;
     min-height: 120px;
     border: 1px solid rgba(33, 33, 33, 0.2);
@@ -661,6 +668,7 @@ img {
 .footer-container {
     display: flex;
     align-items: baseline;
+    justify-content: space-between;
 }
 
 .main-footer {
